--- a/googlelandingpage.html
+++ b/googlelandingpage.html
@@ -10,12 +10,11 @@
 <body>
     <header>
         <div id="container">
-            <a id='about' class ='links'href="https://www.youtube.com/watch?v=PEEs7oKntr4" id='About'>About</a>
-            <a href="https://www.youtube.com/watch?v=SghrdlQSRBQ" class="links" id="Store">Store</a>
-            <button id='button' onclick="document.location='http://www.ahmetflix.com/2021/01/blog-post_3.html'gi">Sign in</button>
-            <img id ='dot' src="9dot.PNG">
-            <a class="links" id='images' href = 'https://iatkv.tmgrup.com.tr/0c35c9/600/314/0/17/1220/654?u=https%3A%2F%2Fitkv.tmgrup.com.tr%2F2020%2F06%2F10%2Fkutsal-damacana-oyunculari-kim-kutsal-damacana-filmi-konusu-nedir-1591801482811.jpg'>Images</a>
-            <a class ='links'id='gmail' href='https://i1.sndcdn.com/artworks-NJfa34dOv5pqj7J8-Z1373w-t500x500.jpg'>Gmail</a>
+            <a id='about' class ='links'href="#" id='About'>About</a>
+            <a href="#" class="links" id="Store">Store</a>
+            <button id='button'>Sign in</button>
+            <img id ='dot' src="9dot.PNG">'>Images</a>
+            <a class ='links'id='gmail'>Gmail</a>
         </div>
     </header>
     <main>
@@ -42,9 +41,9 @@
        
     </main>
     <div id='bottombuttons'>
-        <button id='searchButton' onclick="document.location='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRy4X0Fqt5LLVLnV5r-Km8FgE8XnqHyzLZIw&usqp=CAU'">Google Search</button>
+        <button id='searchButton'>Google Search</button>
 
-        <button id='luck' onclick="document.location='https://i.pinimg.com/736x/1e/ce/05/1ece050eeddb1eb0a50ecde3a7a13772.jpg'">I'm Feeling Lucky</button>
+        <button id='luck'>I'm Feeling Lucky</button>
         <p id="undertext">Other Language you can use Google: <a href='#'>English</a></p>
     </div>
 
