--- a/googlelandingpage.html
+++ b/googlelandingpage.html
@@ -52,12 +52,12 @@
         ">Turkey</p>
     </div>
     <div id='bottomfooter'>
-        <p class="left" style="float:left;margin-left: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;">Advertising</p>
-        <p class="left" style="float:left;margin-left: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;">Business</p>
-        <p class="left" style="float:left;margin-left: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;">How Search Works</p>
-        <p class="right" style='float:right;margin-right: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;'>Privacy</p>
-        <p class="right" style='float:right;margin-right: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;'>Terms</p>
-        <p class="right" style='float:right;margin-right: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;'>Settings</p>
+        <p class="left" id="advertising" style="float:left;margin-left: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;">Advertising</p>
+        <p class="left"  id="busines" style="float:left;margin-left: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;">Business</p>
+        <p class="left"  id="howsearch" style="float:left;margin-left: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;">How Search Works</p>
+        <p class="right"  id="privacy" style='float:right;margin-right: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;'>Privacy</p>
+        <p class="right" id="terms" style='float:right;margin-right: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;'>Terms</p>
+        <p class="right" id="settings" style='float:right;margin-right: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;'>Settings</p>
     </div>
     
 
