css file edited

--- a/googlelandingpage.html
+++ b/googlelandingpage.html
@@ -13,7 +13,7 @@
             <a id='about' class ='links'href="#" id='About'>About</a>
             <a href="#" class="links" id="Store">Store</a>
             <button id='button'>Sign in</button>
-            <img id ='dot' src="9dot.PNG">'>Images</a>
+            <img id ='dot' src="9dot.PNG">Images</a>
             <a class ='links'id='gmail'>Gmail</a>
         </div>
     </header>
@@ -52,12 +52,12 @@
         ">Turkey</p>
     </div>
     <div id='bottomfooter'>
-        <p class="left" id="advertising" style="float:left;margin-left: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;">Advertising</p>
-        <p class="left"  id="busines" style="float:left;margin-left: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;">Business</p>
-        <p class="left"  id="howsearch" style="float:left;margin-left: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;">How Search Works</p>
-        <p class="right"  id="privacy" style='float:right;margin-right: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;'>Privacy</p>
-        <p class="right" id="terms" style='float:right;margin-right: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;'>Terms</p>
-        <p class="right" id="settings" style='float:right;margin-right: 20px;font-size: 18px;font-weight: lighter;font-family: Times New Roman, Times, serif;'>Settings</p>
+        <p class="left" id="advertising">Advertising</p>
+        <p class="left"  id="busines">Business</p>
+        <p class="left"  id="howsearch">How Search Works</p>
+        <p class="right"  id="privacy">Privacy</p>
+        <p class="right" id="terms">Terms</p>
+        <p class="right" id="settings">Settings</p>
     </div>
     
 
