--- a/googlelandingpage.html
+++ b/googlelandingpage.html
@@ -13,7 +13,7 @@
             <a id='about' class ='links'href="#" id='About'>About</a>
             <a href="#" class="links" id="Store">Store</a>
             <button id='button'>Sign in</button>
-            <img id ='dot' src="9dot.PNG">Images</a>
+            <img id ='dot' src="9dot.PNG">
             <a class ='links'id='gmail'>Gmail</a>
         </div>
     </header>
